# visual-evals

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt  segmentation_module.py  test_display.py  utils.py
.streamlit/: config.toml
