[project]
name = "visual-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.9.3",
    "google-genai>=1.20.0",
    "google-generativeai==0.8.5",
    "mediapipe==0.10.21",
    "numpy==1.26.4",
    "opencv-python-headless==4.9.0.80",
    "pillow==10.2.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv==1.0.1",
    "scikit-image>=0.25.2",
    "streamlit==1.32.0",
    "websockets>=13.0",
]
